Google Analytics added. Minor style adjustments to carousel caption.

--- a/import/import.html
+++ b/import/import.html
@@ -23,7 +23,7 @@
 <div id="import-footer-in">
   <footer class="container-fluid bg-blue text-center">
     <div class="info-box">
-      <div class="footnote">HO-WAN TO &copy;2018</span>
+      <div class="footnote">&copy;2018 Ho-Wan To</span>
         <a href="https://www.linkedin.com/in/howanto/" class="fab fa-linkedin"></a>
         <a href="https://github.com/ho-wan" class="fab fa-github"></a>
       </div>
