--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -33,6 +33,18 @@
       width: 100vw;
     }
   </style>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120258112-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-120258112-1');
+  </script>
+  <!-- Google Analytics End -->
 </head>
 
 <body>
