--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ho-Wan's Website</title>
-  <!-- HOSTED -->
+  <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+  <!-- HOSTED -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
   <!-- LOCAL -->
   <link rel="stylesheet" href="/css/style.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120258112-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-120258112-1');
+  </script>
+  <!-- Google Analytics End -->
 </head>
 
 <body>
@@ -45,7 +59,7 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="img/s_code_cr.jpg" alt="Second slide">
             <div class="carousel-caption">
-              <div class="text font-white">Software Engineer:
+              <div class="text font-white">Software Engineer;
                 <br>Full Stack Developer</br>
               </div>
             </div>
@@ -53,7 +67,7 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="img/b_hallway_cr.jpg" alt="Third slide">
             <div class="carousel-caption">
-              <div class="text font-black">Structural Engineer:
+              <div class="text font-black-outline">Structural Engineer;
                 <br>Building Designer</br>
               </div>
             </div>
@@ -92,7 +106,7 @@
           <ul>
             <b>
               <li> JavasSript: Node.js, Express, Angular</li>
-              <li>Python: Django</li>
+              <li>Python: Django, Flask</li>
               <li>MongoDB, MySQL, PostgreSQL</li>
             </b>
           </ul>
@@ -140,9 +154,10 @@
         </a>
         <br></br>
         <p>I have an engineering degree from the University of Cambridge (Trinity College).</p>
-        <p>I am graduating with a masters degree in Computation from UCL in September 2018.</p>
+        <p>I am graduating with a masters degree in Architectural Computation from UCL in September 2018.</p>
         <p>If you are interested in hiring a highly motivated and professional software engineer, you can contact me through
-          LinkedIn.</p>
+          LinkedIn.
+        </p>
       </div>
     </div>
   </div>
