--- a/index.html
+++ b/index.html
@@ -33,7 +33,26 @@
 <body>
   <div id="home"></div>
   <!-- 0:navbar -->
-  <div id="import-navbar"></div>
+  <!-- <div id="import-navbar"></div> -->
+  <div id="import-navbar-in">
+      <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-blue">
+        <div class="container-fluid">
+          <a class="navbar-brand fab fa-houzz fa-2x link-smooth" href="/index.html#home" dest="home"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-item nav-link link-smooth" href="/index.html#about-me" dest="about-me">ABOUT</a>
+              <a class="nav-item nav-link link-smooth" href="/index.html#software" dest="software">SOFTWARE</a>
+              <a class="nav-item nav-link link-smooth" href="/index.html#structures" dest="structures">STRUCTURES</a>
+              <a class="nav-item nav-link link-smooth" href="/comp/" dest="">COMPUTATION</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
 
   <!-- 1:carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -175,7 +194,7 @@
   <script src="js/index.js"></script>
   <script>
     $(document).ready(function () {
-      $('#import-navbar').load("/import/import.html #import-navbar-in");
+      // $('#import-navbar').load("/import/import.html #import-navbar-in");
       $('#import-footer').load("/import/import.html #import-footer-in");
     });
   </script>
