Text on 3rd caption changed to black.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="img/b_hallway_cr.jpg" alt="Third slide">
             <div class="carousel-caption">
-              <div class="text font-black-outline">Structural Engineer;
+              <div class="text font-black">Structural Engineer;
                 <br>Building Designer</br>
               </div>
             </div>
