navbar moved back to import.html. window.onload added to js. 3dca navbar top margin removed.

--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -15,6 +15,10 @@
   <!-- LOCAL -->
   <link rel="stylesheet" href="/css/style.css">
   <style>
+    body {
+      margin-top: 0;
+    }
+
     canvas {
       padding: 0;
       margin: auto;
@@ -38,6 +42,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120258112-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
+
     function gtag() {
       dataLayer.push(arguments);
     }
