--- a/import/import.html
+++ b/import/import.html
@@ -1,3 +1,23 @@
+<!-- IMPORT NAVBAR HTML -->
+<div id="import-navbar-in">
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-blue">
+    <div class="container-fluid">
+      <a class="navbar-brand fab fa-houzz fa-2x link-smooth" href="/#home" dest="home"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link link-smooth" href="/#about-me" dest="about-me">ABOUT</a>
+          <a class="nav-item nav-link link-smooth" href="/#projects" dest="projects">PROJECTS</a>
+          <a class="nav-item nav-link link-smooth" href="/comp/" dest="">COMPUTATION</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+</div>
+
 <!-- IMPORT FOOTER HTML -->
 <div id="import-footer-in">
   <footer class="container-fluid bg-blue text-center">
