js updated to check if page is on index. removeHash() added.

--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -72,6 +72,7 @@
   <script src="/js/three.js/stats.min.js"></script>
   <script src="/js/three.js/Tween.js"></script>
   <script src="/js/comp/3dca.js"></script>
+  <script src="/js/index.js"></script>
   <!-- IMPORT NAVBAR AND FOOTER HTML -->
   <script>
     $(document).ready(function () {
