--- a/import/import.html
+++ b/import/import.html
@@ -2,7 +2,7 @@
 <div id="import-navbar-in">
   <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-blue">
     <div class="container-fluid">
-      <a class="navbar-brand fab fa-houzz fa-2x link-smooth" href="/#home" dest="home"></a>
+      <a class="navbar-brand fab fa-houzz fa-2x link-smooth" href="/" dest="home"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
