My location added, interests updated.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p>Secondary languages: C#, C++, Java</p>
             <p>3D toolsets: Unity3D, three.js, processing</p>
             <p>Front-end: Bootstrap, React, jQuery</p>
-            <p>Additional interests: Machine Learning, Computer Vision</p>
+            <p>Interests: Machine Learning, Computer Vision, Augmented Reality</p>
           </div>
           <br></br>
         </div>
@@ -148,17 +148,21 @@
         <h2>
           <b>PROJECTS</b>
         </h2>
-        <h3 class="font-blue">3D Game of Life</h3>
-        <p>My 3D cellular automata using rule 5766 (Game of Life) can be found at the following link. </p>
-        <a href="/comp/">
+        <a href="/comp/3dca.html">
+          <h3 class="font-blue">3D Game of Life</h3>
+        </a>
+        <p>My 3D cellular automata using rule 5766 (Game of Life) can be found linked. </p>
+        <a href="/comp/3dca.html">
           <img src="/img/3dca_scr1.JPG" class="img-fluid img-hoverable">
         </a>
         <br></br>
         <p>I have an engineering degree from the University of Cambridge (Trinity College).</p>
-        <p>I am graduating with a masters degree in Architectural Computation from UCL in September 2018.</p>
-        <p>If you are interested in hiring a highly motivated and professional software engineer, you can contact me through
+        <p>I wil graduate with a MSc in Architectural Computation from UCL in September 2018.</p>
+        <p>If you are interested in hiring a highly motivated and professional software engineer, please contact me through
           LinkedIn.
         </p>
+        <p>I am based in London, United Kingdom. I am looking for work as a back-end or full-stack web developer, or as a web app
+          developer.</p>
       </div>
     </div>
   </div>
