linkedin link added.

--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
         <p>I have an engineering degree from the University of Cambridge (Trinity College).</p>
         <p>I wil graduate with a MSc in Architectural Computation from UCL in September 2018.</p>
         <p>If you are interested in hiring a highly motivated and professional software engineer, please contact me through
-          LinkedIn.
+          <a href="https://www.linkedin.com/in/howanto/">LinkedIn</a>.
         </p>
-        <p>I am based in London, United Kingdom. I am looking for work as a back-end or full-stack web developer, or as a web app
-          developer.</p>
+        <p>I am based in London, United Kingdom. I am looking for work as a back-end or full-stack web developer, or as a web
+          app developer.
+        </p>
       </div>
     </div>
   </div>
