--- a/index.html
+++ b/index.html
@@ -33,7 +33,24 @@
 <body>
   <div id="home"></div>
   <!-- 0:navbar -->
-  <div id="import-navbar"></div>
+  <div id="import-navbar-in">
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-blue">
+      <div class="container-fluid">
+        <a class="navbar-brand fab fa-houzz fa-2x link-smooth" href="/" dest="home"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link link-smooth" href="/#about-me" dest="about-me">ABOUT</a>
+            <a class="nav-item nav-link link-smooth" href="/#projects" dest="projects">PROJECTS</a>
+            <a class="nav-item nav-link link-smooth" href="/comp/" dest="">COMPUTATION</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
 
   <!-- 1:carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -170,7 +187,17 @@
 
   <!-- 4:footer -->
   <br>
-  <div id="import-footer"></div>
+  <!-- <div id="import-footer"></div> -->
+  <div id="import-footer-in">
+    <footer class="container-fluid bg-blue text-center">
+      <div class="info-box">
+        <div class="footnote">&copy;2018 Ho-Wan To</span>
+          <a href="https://www.linkedin.com/in/howanto/" class="fab fa-linkedin"></a>
+          <a href="https://github.com/ho-wan" class="fab fa-github"></a>
+        </div>
+      </div>
+    </footer>
+  </div>
 
   <!-- HOSTED -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -179,13 +206,6 @@
     crossorigin="anonymous"></script>
   <!-- LOCAL -->
   <script src="js/index.js"></script>
-  <script>
-    // import navbar and footer html
-    $(document).ready(function () {
-      $('#import-navbar').load("/import/import.html #import-navbar-in");
-      $('#import-footer').load("/import/import.html #import-footer-in");
-    });
-  </script>
 
 </body>
 
