window.onload removed since import removed. favicon added.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous">
   <!-- LOCAL -->
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" href="/favicon.ico">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120258112-1"></script>
@@ -28,6 +29,7 @@
     gtag('config', 'UA-120258112-1');
   </script>
   <!-- Google Analytics End -->
+
 </head>
 
 <body>
