br tags amended. style updates for Edge, navbar improved.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="carousel-caption">
               <div class="text">Hello, I'm
                 <span class="font-blue">Ho-Wan</span>.
-                <br> I'm an engineer.</br>
+                <br> I'm an engineer.
               </div>
               <p class="line-break"></p>
               <button class="btn btn-about link-smooth" href="#about-me" dest="about-me">Find out more!</button>
@@ -79,7 +79,7 @@
             <img class="d-block w-100" src="img/s_code_cr.jpg" alt="Second slide">
             <div class="carousel-caption">
               <div class="text font-white">Software Engineer;
-                <br>Full Stack Developer</br>
+                <br>Full Stack Developer
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
             <img class="d-block w-100" src="img/b_hallway_cr.jpg" alt="Third slide">
             <div class="carousel-caption">
               <div class="text font-black">Structural Engineer;
-                <br>Building Designer</br>
+                <br>Building Designer
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
             <p>Front-end: Bootstrap, React, jQuery</p>
             <p>Interests: Machine Learning, Computer Vision, Augmented Reality</p>
           </div>
-          <br></br>
+          <br>
         </div>
       </div>
       <div class="col-md-6 text-center about-col" id="structures">
@@ -149,8 +149,8 @@
               <li>100 Bishopsgate - Core Design Lead</li>
               <li>Nova Victoria - Project Engineer</li>
               <li>Finite Element/ Lateral Stability Expert</li>
+            </b>
           </ul>
-          </b>
           <p>I am an experienced structural engineer and have worked as a senior engineer / project engineer on a number of
             high profile construction projects.</p>
           <p>I have worked with top clients such as Land Securities, Lend Lease, Brookfield, Mace, and many well respected architects
@@ -174,7 +174,7 @@
         <a href="/comp/3dca.html">
           <img src="/img/3dca_scr1.JPG" class="img-fluid img-hoverable">
         </a>
-        <br></br>
+        <p class="line-break"></p>
         <p>I have an engineering degree from the University of Cambridge (Trinity College).</p>
         <p>I wil graduate with a MSc in Architectural Computation from UCL in September 2018.</p>
         <p>If you are interested in hiring a highly motivated and professional software engineer, please contact me through
