Disable zoom for mobile.

--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- DISABLE ZOOM -->
+  <meta name="viewport" content="user-scalable=no"/>
   <title>3D Cellular Automata</title>
   <!-- HOSTED -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
