--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Ho-Wan/howanto.com/master/img/3dca_cube.jpg">
   <title>3D Cellular Automata</title>
   <!-- HOSTED -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
