about txt: scroll change dto zoom

--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -84,7 +84,7 @@
         <p class="line-break"></p>
         <p>3D Game of Life (Cellular Automata)<br>
         Created by Ho-Wan To<br>
-        Can scroll and orbit if camera paused.<br>
+        Can zoom and orbit if camera paused.<br>
         New glider/oscillator every 0.5s<br>
         Uses three.js, Tween.js<br>
         Fork me on <a href="https://github.com/ho-wan/howanto.com"><b>GitHub!</b></a></p>
