--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -65,7 +65,7 @@
     <div class="panel transbox">
       <button class="panel button" id="btn2">
         <i class="fas fa-sun"></i>
-        <p class="panel btn-txt" id="btn2-txt">Stop light</p>
+        <p class="panel btn-txt" id="btn2-txt">Toggle moving light</p>
       </button>
       <button class="panel button" id="btn3">
         <i class="fas fa-pause"></i>
@@ -73,11 +73,11 @@
       </button>
       <button class="panel button" id="btn4">
         <i class="fas fa-camera"></i>
-        <p class="panel btn-txt" id="btn4-txt">Stop camera</p>
+        <p class="panel btn-txt" id="btn4-txt">Toggle moving camera</p>
       </button>
       <button class="panel button" id="btn5">
         <i class="fas fa-chart-bar"></i>
-        <p class="panel btn-txt" id="btn5-txt">Toggle Stats</p>
+        <p class="panel btn-txt" id="btn5-txt">Toggle stats</p>
       </button>
       <div class="panel" id="about-txt">
         <h5><u>About</u></h5>
