--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -65,15 +65,15 @@
     <div class="panel transbox">
       <button class="panel button" id="btn2">
         <i class="fas fa-sun"></i>
-        <p class="panel btn-txt" id="btn2-txt">Toggle moving light</p>
+        <p class="panel btn-txt" id="btn2-txt">Z: Move light</p>
       </button>
       <button class="panel button" id="btn3">
         <i class="fas fa-pause"></i>
-        <p class="panel btn-txt" id="btn3-txt">Toggle cell update</p>
+        <p class="panel btn-txt" id="btn3-txt">X: Update cell</p>
       </button>
       <button class="panel button" id="btn4">
         <i class="fas fa-camera"></i>
-        <p class="panel btn-txt" id="btn4-txt">Toggle moving camera</p>
+        <p class="panel btn-txt" id="btn4-txt">C: Move camera</p>
       </button>
       <button class="panel button" id="btn5">
         <i class="fas fa-chart-bar"></i>
