meta description and keywords added to 3dca html. css prevent overscroll refresh

--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -3,9 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://raw.githubusercontent.com/Ho-Wan/howanto.com/master/img/3dca_cube.jpg">
+  <meta name="description" content="3D Cellular Automata - Game of Life. Uses WebGL, three.js. Cool, stylish and polished 3D graphics showcase in web browser with interactive demo.">
+  <meta name="keywords" content="3D, Cellular, Automata, Game of Life, WebGL, three.js, cool, stylish, polished, web browser, graphics, interactive, demo, showcase">
+  <meta name="author" content="Ho-Wan To">
   <title>3D Cellular Automata</title>
   <!-- HOSTED -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
