slider added. camera mouse on main body only.

--- a/comp/3dca.html
+++ b/comp/3dca.html
@@ -59,7 +59,12 @@
   <div id="threejs"></div>
 
   <!-- 2:UI -->
+
   <div class="container-fluid">
+      <div class="slider-wrapper">
+          <input type="range" min="0" max="11" value="7" step="1">
+        </div>
+
     <div class="buttons">
       <button class="button" id="btn1">
         <i class="fas fa-question"></i>
@@ -82,15 +87,18 @@
         <i class="fas fa-chart-bar"></i>
         <p class="panel btn-txt" id="btn5-txt">Toggle stats</p>
       </button>
+      <div class="slidecontainer">
+        <p>Fade time: <span id="fade-time">5.0</span>s</p>
+        <input type="range" min="0" max="5" value="0.6" step = "0.1" class="slider" id="slider1">
+      </div>
       <div class="panel" id="about-txt">
         <h5><u>About</u></h5>
-        <p class="line-break"></p>
         <p>3D Game of Life (Cellular Automata)<br>
         Created by Ho-Wan To<br>
         Can zoom and orbit if camera paused.<br>
         New glider/oscillator every 0.5s<br>
         Uses three.js, Tween.js<br>
-        Fork me on <a href="https://github.com/ho-wan/howanto.com"><b>GitHub!</b></a></p>
+        Find me on <a href="https://github.com/ho-wan/howanto.com"><b>GitHub!</b></a></p>
       </div>
     </div>
   </div>
