--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
           <h4>Focus</h4>
           <ul>
             <b>
-              <li>JavaScript: Node.js, Express, Angular</li>
-              <li>Python: Django, Flask</li>
-              <li>MongoDB, MySQL, PostgreSQL</li>
+              <li>Primary Languages: Python, JavaScript, C#</li>
+              <li>Frameworks: Django, Flask, Express</li>
+              <li>Database: MongoDB, MySQL, PostgreSQL</li>
             </b>
           </ul>
           <div class="font-s1">
-            <p>Secondary languages: C#, C++, Java</p>
-            <p>3D toolsets: Unity3D, three.js, processing</p>
-            <p>Front-end: Bootstrap, React, jQuery</p>
-            <p>Interests: Machine Learning, Computer Vision, Augmented Reality</p>
+            <p>Secondary languages: Java, C++, TypeScript</p>
+            <p>3D toolsets: Unity, three.js, processing</p>
+            <p>Front-end: Bootstrap, jQuery, React, HTML, CSS</p>
+            <p>Other Interests: Machine Learning, Computer Vision, Augmented Reality</p>
           </div>
           <br>
         </div>
@@ -173,7 +173,12 @@
         <a href="/comp/3dca.html" title="Go to 3D Cellular Automata">
           <h3 class="font-blue">3D Game of Life</h3>
         </a>
-        <p>My 3D cellular automata using rule 5766 (Game of Life) can be found linked. </p>
+        <div class="projects-text">
+          <p>3D cellular automata visualization created using three.js and WebGL. Logic implemented in JavaScript. This runs
+            and renders live in the web browser, and works on most mobiles.
+            <p class="line-break"></p>
+            Based on my morphogenetic programming assignment at UCL.</p>
+        </div>
         <a href="/comp/3dca.html">
           <img src="/img/3dca_scr1.JPG" class="img-fluid img-hoverable" title="Go to 3D Cellular Automata">
         </a>
@@ -182,16 +187,20 @@
       <div class="col-md-6 text-center projects" id="project-right" title="Go to GitHub repository">
         <a href="https://github.com/Ho-Wan/vscode-setting-toggle">
           <h3 class="font-blue">Setting Toggle:</h3>
-          <h5 class="font-blue">A VS Code Extension</h5>
         </a>
-        <p>A Visual Studio Code extension developed by yours truly.</p>
+        <div class="projects-text">
+          <p>A Visual Studio Code extension developed by myself. This extension adds a button and command which can be used to
+            toggle any VS Code setting between two states. </p>
+            <p class="line-break"></p>
+            Uses Typescript, Node.js, npm, JSON string matching, RegEx, Yeoman.</p>
+          </div>
         <a href="https://marketplace.visualstudio.com/items?itemName=Ho-Wan.setting-toggle">
-          <img src="/img/setting-toggle-vsmarket.JPG" class="img-fluid img-hoverable" title="Go to VS marketplace">
+          <img src="/img/setting-toggle-vsmarket1.JPG" class="img-fluid img-hoverable" title="Go to VS marketplace">
         </a>
         <p class="line-break"></p>
-        <p>This extension adds a button and command which can be used to toggle any custom VS Code boolean setting.</p>
         <a href="https://github.com/Ho-Wan/vscode-setting-toggle">
-          <img src="/img/setting-toggle-img1.png" class="img-fluid img-hoverable" title="Go to GitHub repository">
+          <img src="https://raw.githubusercontent.com/Ho-Wan/vscode-setting-toggle/master/images/setting-toggle.gif" alt="Setting-toggle demo-gif-1"
+            class="img-fluid img-hoverable" title="Go to GitHub repository">
         </a>
         <p class="line-break"></p>
       </div>
@@ -201,11 +210,10 @@
     <!-- 4:status -->
     <div class="jumbotron">
       <h2 class="display-4">STATUS</h1>
-        <p class="lead font-blue">Full-stack / Back-end web developer looking for work in London in JavaScript or Python.</p>
-        <p class="lead">I hope to work with people with a passion for technology and progress.</p>
+        <p class="lead">Highly motivated engineer looking for work in London as a software/web developer.</p>
         <p>I have an engineering degree from the University of Cambridge (Trinity College).</p>
         <p>I wil graduate with a MSc in Architectural Computation from UCL in September 2018.</p>
-        <p>If you are interested in hiring a highly motivated and professional software engineer, please contact me through
+        <p>If you are interested in hiring me, please contact me through
           <a href="https://www.linkedin.com/in/howanto/">LinkedIn</a>.
         </p>
         <p>Or email me directly at
