--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- 2:about -->
     <div class="container" id="about-me">
       <div class="text-center">
-        <h2><b>ABOUT ME</b></h2>
+        <h2 class="section-header"><b>ABOUT ME</b></h2>
         <p>My passion is solving problems and developing solutions the world needs.</p>
         <p>I value simple, scalable and functional solutions over complex and bespoke.</p>
         <hr />
@@ -184,7 +184,7 @@
 
     <!-- 3:projects -->
     <div class="container" id="projects">
-      <h2 class="text-center"><b>PERSONAL PROJECTS</b></h2>
+      <h2 class="text-center section-header"><b>PERSONAL PROJECTS</b></h2>
       <div class="row text-center">
         <div class="col-md text-center projects" id="project-left">
           <a href="/comp/3dca.html" title="Go to 3D Cellular Automata"> <h3 class="font-blue">3D Game of Life</h3> </a>
@@ -195,14 +195,15 @@
             </p>
             <p class="line-break"></p>
             Based on my morphogenetic programming assignment at UCL.
+            <p class="line-break"></p>
           </div>
           <a href="/comp/3dca.html">
             <img src="/img/3dca_scr1.JPG" class="img-fluid img-hoverable" title="Go to 3D Cellular Automata" />
           </a>
           <p class="line-break"></p>
         </div>
-        <div class="col-md text-center projects" id="project-right" title="Go to GitHub repository">
-          <a href="https://github.com/Ho-Wan/vscode-setting-toggle">
+        <div class="col-md text-center projects" id="project-right" >
+          <a href="https://github.com/Ho-Wan/vscode-setting-toggle" title="Go to GitHub repository">
             <h3 class="font-blue">VS Code: Setting Toggle</h3>
           </a>
           <div class="projects-text">
@@ -211,7 +212,8 @@
               settings such as codelens.
             </p>
             TECH: Typescript, Node.js, File System, RegEx. <br />
-            <a href="https://marketplace.visualstudio.com/items?itemName=Ho-Wan.setting-toggle">
+            <a href="https://marketplace.visualstudio.com/items?itemName=Ho-Wan.setting-toggle"
+              style="text-decoration : none" title="Go to VS marketplace">
               <img src="https://vsmarketplacebadge.apphb.com/version-short/ho-wan.setting-toggle.svg" />
               <img src="https://vsmarketplacebadge.apphb.com/installs/ho-wan.setting-toggle.svg" />
             </a>
@@ -225,7 +227,7 @@
               title="Go to VS marketplace"
             />
           </a>
-          <br />
+          <p class="line-break"></p>
           <a href="https://github.com/Ho-Wan/vscode-setting-toggle">
             <img
               src="https://raw.githubusercontent.com/Ho-Wan/vscode-setting-toggle/master/images/setting-toggle.gif"
@@ -236,8 +238,8 @@
           </a>
           <p class="line-break"></p>
         </div>
-        <div class="col-md text-center projects" id="project-right" title="Go to GitHub repository">
-          <a href="https://github.com/Ho-Wan/vscode-trello-viewer">
+        <div class="col-md text-center projects" id="project-right">
+          <a href="https://github.com/Ho-Wan/vscode-trello-viewer" title="Go to GitHub repository">
             <h3 class="font-blue">VS Code: Trello Viewer</h3>
           </a>
           <div class="projects-text">
@@ -247,7 +249,8 @@
             </p>
             TECH: Typescript, Node.js, VS Code Tree View, File System, Trello API, async/await, unit testing, encryption
             with IV <br />
-            <a href="https://marketplace.visualstudio.com/items?itemName=Ho-Wan.vscode-trello-viewer">
+            <a href="https://marketplace.visualstudio.com/items?itemName=Ho-Wan.vscode-trello-viewer"
+              style="text-decoration : none" title="Go to VS marketplace">
               <img src="https://vsmarketplacebadge.apphb.com/version-short/ho-wan.vscode-trello-viewer.svg" />
               <img src="https://vsmarketplacebadge.apphb.com/installs/ho-wan.vscode-trello-viewer.svg" />
             </a>
